--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Nomenclator activitati economice">
 	<meta name="keywords" content="caen, cod, activitati, economice, ios, macos, swiftui">
 	<meta name="author" content="appinqode">
-	<meta name="url" content="appinqode">
+	<meta name="url" content="">
 	<meta name="identifier-URL" content="">
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="Expires" content="0">
@@ -36,24 +36,11 @@
 						</button>
 					</a>
 					<hr>
-					<h1 class="fs-1 lh-base pb-2"><strong>Aplicatia mobila Cod CAEN</strong> prezinta codurile Nomenclatorului CAEN <strong>Rev. 3 / 2024</strong> si <strong>Rev. 2 / 2008</strong>, cu privire la ordonarea informatiilor economice potrivit noului mod de organizare a economiei nationale.</h1>
+					<h1 class="fs-1 lh-base pb-2">Aplicatia <strong>Cod CAEN</strong> ofera acces rapid la toate codurile CAEN actualizate, esentiale pentru firme, antreprenori si specialisti in contabilitate sau consultanta in afaceri.</h1>
+					<h2 class="fs-4 lh-base pb-2">Aplicatia include un modul inteligent de conversie intre codurile CAEN vechi <strong>(Rev. 2 / 2008)</strong> si cele noi <strong>(Rev. 3 / 2024)</strong>, oferind corespondenta exacta pentru migrarea activitatilor fara erori. Ideala pentru firme care isi actualizeaza datele, emit facturi si doresc conformitate completa cu legislatia in vigoare privind clasificarea activitatilor economice din comert si servicii.</h2>
 					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
 						<button type="button" class="bg-transparent text-black border border-0 text-decoration-none m-0 p-0 cutomButon">
 							<img src="./assets/img/download.png" class="rounded downloadImage pb-4" alt="image">
-						</button>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	
-	<section class="text-center">
-		<div class="container-fluid m-0 p-0">
-			<div class="row">
-				<div class="col-12">
-					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
-						<button type="button" class="bg-transparent text-black border border-0 text-decoration-none m-0 p-0 cutomButon">
-							<img src="./assets/img/promobanner.jpg" class="img-fluid" alt="image">
 						</button>
 					</a>
 				</div>
@@ -64,9 +51,46 @@
 	<section class="text-center">
 		<div class="container">
 			<div class="row">
+				<div class="col-md-2 pb-2">
+					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
+						<img src="./assets/img/image_1.png" class="img-fluid rounded" alt="image">
+					</a>
+				</div>
+				<div class="col-md-2 pb-2">
+					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
+						<img src="./assets/img/image_2.png" class="img-fluid rounded" alt="image">
+					</a>
+				</div>
+				<div class="col-md-2 pb-2">
+					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
+						<img src="./assets/img/image_3.png" class="img-fluid rounded" alt="image">
+					</a>
+				</div>
+				<div class="col-md-2 pb-2">
+					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
+						<img src="./assets/img/image_4.png" class="img-fluid rounded" alt="image">
+					</a>
+				</div>
+				<div class="col-md-2 pb-2">
+					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
+						<img src="./assets/img/image_5.png" class="img-fluid rounded" alt="image">
+					</a>
+				</div>
+				<div class="col-md-2 pb-2">
+					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
+						<img src="./assets/img/image_6.png" class="img-fluid rounded" alt="image">
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="text-center">
+		<div class="container">
+			<div class="row">
 				<div class="col-12">
-					<h2 class="fs-3 lh-base pt-3 pb-2"><strong>Despre Cod CAEN</strong></h2>
-					<h3 class="fs-6 lh-base pb-2"><strong>Aplicatia mobila Cod CAEN</strong> este revizuita in mod permanent si se poate descarca in mod gratuit din App Store. Toate informatiile prezentate utilizatorului de catre aceasta aplicatie, au un scop orientativ. Responsabilitatea pentru folosirea acestor informatii, revine in totalitate utilizatorilor.</h3>
+					<h3 class="fs-4 lh-base pt-3 pb-2"><strong>Despre Cod CAEN</strong></h3>
+					<h4 class="fs-4 lh-base pb-2">Cauta usor dupa denumire, cuvinte-cheie sau numar de cod si descopera descrierea completa a fiecarei activitati economice din registrul comertului.</h4>
 				</div>
 			</div>
 		</div>
@@ -91,22 +115,22 @@
 					<p class="modal-title fs-5" id="modalPrivacyLabel">Politica de Confidentialitate / Privacy Policy</p>
 				</div>
 				<div class="modal-body">
-					<p class="fw-medium">Definitie si consimtamant.</p>
-					<p class="fw-normal">Aceasta Politica de Confidentialitate este valabila pentru aplicatia mobila Cod CAEN. Declinarea acceptului, presupune stergerea acestei aplicatii din dispozitiv. Continuarea utilizarii acestei aplicatii, reprezinta acordul implicit al utilizatorului.</p>
-					<p class="fw-medium mt-3">Colectarea informatiilor.</p>
-					<p class="fw-normal">Aplicatia mobila Cod CAEN nu citeste, nu colecteaza, nu stocheaza, nu memoreaza si nu salveaza niciun fel de informatii sau date informatice de la sau legate de dispozitivul dumneavoastra, sistemul de operare, hardware-ul folosit, configuratia retelei, alte dispozitive atasate sau asociate, utilizatori si / sau conturi active.</p>
-					<p class="fw-medium mt-3">Modificari ale Politicii de Confidentialitate.</p>
-					<p class="fw-normal">Aceasta Politica de Confidentialitate se poate modifica fara consimtamantul si / sau instiintarea prealabila a utilizatorului. Orice modificare a acestei Politici de Confidentialitate devine valabila si este implicit acceptata de catre utilizatorul acestei aplicatii in momentul in care este prezentata aici.</p>
+					<p class="fw-medium">1. Introducere</p>
+					<p class="fw-normal">Cod CAEN este o aplicatie care prezinta Codurile CAEN Rev. 3 / 2024 si Rev. 2 / 2008, pentru activitatile economice din Romania.</p>
+					<p class="fw-medium mt-3">2. Colectarea informatiilor</p>
+					<p class="fw-normal">Cod CAEN nu colecteaza, stocheaza si nu transmite date personale sau sensibile ale utilizatorilor. Nu este necesar un cont, astfel ca puteti utiliza aplicatia fara a va inregistra sau a furniza informatii. Aplicatia Cod CAEN nu utilizeaza servicii de analiza, cookie-uri sau reclame publicitate.</p>
+					<p class="fw-medium mt-3">3. Permisiuni</p>
+					<p class="fw-normal">Acces pentru partajare se declanseaza numai atunci cand alegeti sa partajati o informatie. Aceasta actiune este gestionata in intregime de catre sistemul de operare din dispozitv. Aplicatia Cod CAEN nu acceseaza, nu monitorizeaza si nu controleaza ce se intampla dupa ce alegeti sa partajati o informatie.</p>
+					<p class="fw-medium mt-3">4. Partajarea datelor</p>
+					<p class="fw-normal">Nicio informatie nu este partajata cu terte parti.</p>
+					<p class="fw-medium mt-3">5. Securitate</p>
+					<p class="fw-normal">Nicio informatie nu se transmite in afara dispozitivului.</p>
+					<p class="fw-medium mt-3">6. Modificari ale acestei Politici de Confidentialitate</p>
+					<p class="fw-normal">Este posibil sa existe actualizari periodice ale acestei Politici de Confidentialitate. Orice modificarea se poate efectua fara consimtamantul si / sau instiintarea prealabila si / sau ulterioara a utilizatorului. Modificarile vor fi reflectate prin actualizarea Datei de intrare in vigoare, de mai sus.</p>
+					<p class="fw-medium mt-3">7. Contact</p>
+					<p class="fw-normal">Pentru intrebari sau nelamuriri cu privire la aceasta Politica de Confidentialitate, folositi adresa de contact.</p>
 					<hr>
-					<p class="fw-medium">Definition and consent.</p>
-					<p class="fw-normal">This Privacy Policy applies to the Cod CAEN mobile application. Declining acceptance implies deleting this application from the device. Continuing to use this application represents the implicit consent of the user.</p>
-					<p class="fw-medium mt-3">Information collection.</p>
-					<p class="fw-normal">The Cod CAEN mobile application does not read, collect, store, memorize or save any information or computer data from or related to your device, operating system, hardware used, network configuration, other attached or associated devices, users and / or active accounts.</p>
-					<p class="fw-medium mt-3">Changes to the Privacy Policy.</p>
-					<p class="fw-normal">This Privacy Policy may be modified without the consent and / or prior notice of the user. Any modification to this Privacy Policy becomes valid and is implicitly accepted by the user of this application at the time it is presented here.</p>
-					<hr>
-					<p class="m-0 p-0">Acest site web nu colectează niciun fel de informații!</p>
-					<p class="m-0 p-0">This website do not collect any kind of informations!</p>
+					<p class="m-0 p-0">Acest site web nu colectează niciun fel de informatii!</p>
 				</div>
 				<div class="modal-footer border border-0">
 					<button type="button" class="btn btn-link text-black border border-0 text-decoration-none" data-bs-dismiss="modal">Inchide / Close</button>
