--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<div class="modal-dialog modal-dialog-centered modal-lg">
 			<div class="modal-content">
 				<div class="modal-header border border-0">
-					<p class="modal-title fs-5" id="modalPrivacyLabel">Politica de Confidentialitate / Privacy Policy</p>
+					<p class="modal-title fs-5" id="modalPrivacyLabel">Politica de Confidentialitate</p>
 				</div>
 				<div class="modal-body">
 					<p class="fw-medium">1. Introducere</p>
@@ -145,3 +145,4 @@
 </body>
 
 </html>
+
