--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<p class="m-0 p-0">Acest site web nu colectează niciun fel de informatii!</p>
 				</div>
 				<div class="modal-footer border border-0">
-					<button type="button" class="btn btn-link text-black border border-0 text-decoration-none" data-bs-dismiss="modal">Inchide / Close</button>
+					<button type="button" class="btn btn-link text-black border border-0 text-decoration-none" data-bs-dismiss="modal">Inchide</button>
 				</div>
 			</div>
 		</div>
@@ -145,4 +145,5 @@
 </body>
 
 </html>
+
 
