--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<p class="fw-medium mt-3">5. Securitate</p>
 					<p class="fw-normal">Nicio informatie nu se transmite in afara dispozitivului.</p>
 					<p class="fw-medium mt-3">6. Modificari ale acestei Politici de Confidentialitate</p>
-					<p class="fw-normal">Este posibil sa existe actualizari periodice ale acestei Politici de Confidentialitate. Orice modificarea se poate efectua fara consimtamantul si / sau instiintarea prealabila si / sau ulterioara a utilizatorului. Modificarile vor fi reflectate prin actualizarea Datei de intrare in vigoare, de mai sus.</p>
+					<p class="fw-normal">Este posibil sa existe actualizari periodice ale acestei Politici de Confidentialitate. Orice modificarea se poate efectua fara consimtamantul si / sau instiintarea prealabila si / sau ulterioara a utilizatorului.</p>
 					<p class="fw-medium mt-3">7. Contact</p>
 					<p class="fw-normal">Pentru intrebari sau nelamuriri cu privire la aceasta Politica de Confidentialitate, folositi adresa de contact.</p>
 					<hr>
@@ -145,5 +145,6 @@
 </body>
 
 </html>
+
 
 
