--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="row border-top">
 				<div class="col-12 mt-3">
 					<p class="fs-6 fw-medium">
-						<script>document.write(new Date().getFullYear())</script>&nbsp;&bull;&nbsp;Cod CAEN&nbsp;&bull;&nbsp;<button type="button" class="bg-transparent text-black border border-0 text-decoration-none m-0 p-0 cutomButon" data-bs-toggle="modal" data-bs-target="#modalPrivacy">Politica de confidentialitate</button>
+						<script>document.write(new Date().getFullYear())</script>&nbsp;&bull;&nbsp;Cod CAEN&nbsp;&bull;&nbsp;<a href="https://appinqode.github.io/codcaenprivacypolicy/" class="text-black border border-0 text-decoration-none m-0 p-0" target="_blank">Politica de confidentialitate</button>
 					</p>
 				</div>
 			</div>
@@ -145,6 +145,7 @@
 </body>
 
 </html>
+
 
 
 
