--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="row border-top">
 				<div class="col-12 mt-3">
 					<p class="fs-6 fw-medium">
-						<script>document.write(new Date().getFullYear())</script>&nbsp;&bull;&nbsp;Cod CAEN&nbsp;&bull;&nbsp;<a href="https://appinqode.github.io/codcaenprivacypolicy/" class="text-black border border-0 text-decoration-none m-0 p-0" target="_blank">Politica de confidentialitate</a>
+						<script>document.write(new Date().getFullYear())</script>&nbsp;&bull;&nbsp;Cod CAEN&nbsp;&bull;&nbsp;<a href="https://appinqode.github.io/codcaenprivacypolicy/" class="text-black border border-0 text-decoration-none m-0 p-0" target="_blank">Politica de confidentialitate</a>&nbsp;&bull;&nbsp;<a href="https://appinqode.github.io/codcaenterms/" class="text-black border border-0 text-decoration-none m-0 p-0" target="_blank">Termeni si conditii</a>
 					</p>
 				</div>
 			</div>
@@ -114,6 +114,7 @@
 </body>
 
 </html>
+
 
 
 
