--- a/index.html
+++ b/index.html
@@ -90,7 +90,19 @@
 			<div class="row">
 				<div class="col-12">
 					<h3 class="fs-4 lh-base pt-3 pb-2"><strong>Despre Cod CAEN</strong></h3>
-					<h4 class="fs-4 lh-base pb-2">Cauta usor dupa denumire, cuvinte-cheie sau numar de cod si descopera descrierea completa a fiecarei activitati economice din registrul comertului.</h4>
+					<h4 class="fs-4 lh-base pb-3">Cauta usor dupa denumire, cuvinte-cheie sau numar de cod si descopera descrierea completa a fiecarei activitati economice din registrul comertului.</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<a href="https://apps.apple.com/ro/app/cod-caen/id1493406350" target="_blank" class="text-decoration-none">
+						<img src="./assets/img/codcaenbento.png" class="img-fluid rounded" alt="image">
+					</a>
 				</div>
 			</div>
 		</div>
@@ -98,7 +110,7 @@
 
 	<footer class="">
 		<div class="container text-center">
-			<div class="row border-top">
+			<div class="row">
 				<div class="col-12 mt-3">
 					<p class="fs-6 fw-medium">
 						<script>document.write(new Date().getFullYear())</script>&nbsp;&bull;&nbsp;Cod CAEN&nbsp;&bull;&nbsp;<a href="https://appinqode.github.io/codcaenprivacypolicy/" class="text-black border border-0 text-decoration-none m-0 p-0" target="_blank">Politica de confidentialitate</a>&nbsp;&bull;&nbsp;<a href="https://appinqode.github.io/codcaenterms/" class="text-black border border-0 text-decoration-none m-0 p-0" target="_blank">Termeni si conditii</a>
@@ -114,10 +126,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
